--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--========== MAIN CSS ==========-->
     <link rel="stylesheet" href="assets/css/style.css">
 
-    <title>Responsive portfolio website - Crypticalcoder</title>
+    <title>Portfolio Website -DucGaDepZai</title>
 </head>
 
 <body>
